--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Firebase Hosting + Functions
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ]            # change if your default branch is different
     paths:
       - "**/*.html"
       - "css/**"
@@ -35,10 +35,16 @@ jobs:
       - name: 🧾 Checkout repo
         uses: actions/checkout@v4
 
+      - name: 🧪 Check required secrets
+        run: |
+          test -n "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MAUTOURS_60318 }}" || (echo "❌ Missing FIREBASE_SERVICE_ACCOUNT_MAUTOURS_60318" && exit 1)
+          test -n "${{ secrets.FIREBASE_PROJECT_ID }}" || (echo "❌ Missing FIREBASE_PROJECT_ID" && exit 1)
+
       - name: 🔐 Google auth (service account JSON)
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MAUTOURS_60318 }}
+          token_format: 'access_token'
 
       - name: 🟦 Setup Node.js
         uses: actions/setup-node@v4
